# STL-sanitizer

./: .gitignore  EncodingDecodingFacetChTest.py  EncodingDecodingTest.py  LICENSE  README.md  SanitizerRandomTest.py  TransformationLQTest.py  main.py  pyproject.toml
EncodingDecodingFacetCh/: EncodingDecodingFacetCh.py
EncodingDecodingLib/: EncodingDecoding.py
EncodingDecodingVertexChLib/: EncodingDecoding.py
FacetChEncoderLib/: FacetChEncoderLib.py
SanitizersLib/: SanitizerRandom.py
TestFiles/EncodingDecodingTest/encoded/: encoded_sphere.STL
TestFiles/SanitizerRandomTest/1/: sanitized_sphere.STL  secret_after.STL  secret_after.txt
TranformationLQ/: TransformationLQ.py
VertexChEncoderLib/: VertexChEncoderLib.py
exp/: protected_LQ_bunny.STL  protected_LQ_sphere.STL  recovered_HQ_bunny.STL  recovered_HQ_sphere.STL  recovered_canonical.STL  recovered_canonical_bunny.STL
exp/scripts/: EditWatermark.py  HQ2LQ.py  InsertFullWatermark.py  InsertWatermark.py  ReadWatermark.py  RecoverHQ.py  TransformToCanonical.py  TransformToCanonicalVertexCh.py
models/: converterBinToASCII.py
sanitizer_random/experiment/original/: evaluation.csv
sanitizer_random/lib/: sanitizer_random.py
sanitizer_random/tests/: attack_on_sanitizer.py  sanitizer_evaluation.py  sanitizer_random_test.py
sanitizer_random/tests/test_objects/: .~lock.Evaluation_Sanitizer_Vertex_channel.docx#  Evaluation_Sanitizer_Facet_channel.docx  evaluation.html  (+1 more)
tests/TransformationLQTest/: LQ_ball.stl  ball.stl  converterBinToASCII.py  encoded_LQ_ball.stl
tools/: converterBinToASCII.py
(+22 files in other folders)
